--- a/todolist/templates/login.html
+++ b/todolist/templates/login.html
@@ -6,40 +6,106 @@
 
 {% block content %}
 
-<div class = "login">
-
-    <h1>Login</h1>
-
-    <form method="POST" action="">
-        {% csrf_token %}
-        <table>
-            <tr>
-                <td>Username: </td>
-                <td><input type="text" name="username" placeholder="Username" class="form-control"></td>
-            </tr>
-                    
-            <tr>
-                <td>Password: </td>
-                <td><input type="password" name="password" placeholder="Password" class="form-control"></td>
-            </tr>
-
-            <tr>
-                <td></td>
-                <td><input class="btn login_btn" type="submit" value="Login"></td>
-            </tr>
-        </table>
-    </form>
-
-    {% if messages %}
-        <ul>
-            {% for message in messages %}
-                <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}     
+<div class=" bg-slate-200 h-screen">
+    <div class = "h-screen login flex justify-center items-center">
+        <div class="block bg-white shadow-lg rounded-lg p-6">
+            <h1 class="font-bold text-blue-600 text-2xl mt-0.3 mb-1 ml-0.3">Login</h1>
         
-    Belum mempunyai akun? <a href="{% url 'todolist:register' %}">Buat Akun</a>
+                <form method="POST" action="">
+                    {% csrf_token %}
+                    <tr>
+                        <td><h1 class="font-bold">Username:</h1> </td>
+                        <td><input type="text" name="username" placeholder="Username" 
+                            class = "form-control 
+                                    block w-full 
+                                    px-4 
+                                    py-2 
+                                    text-l 
+                                    font-normal 
+                                    text-gray-700 
+                                    bg-gray-100 
+                                    bg-clip-padding 
+                                    border 
+                                    border-solid 
+                                    border-gray-300 
+                                    rounded 
+                                    transition 
+                                    ease-in-out 
+                                    m-0 
+                                    focus:text-gray-700 
+                                    focus:bg-white 
+                                    focus:border-blue-600 
+                                    focus:outline-none">
+                        </td>
+                    </tr>        
+                    <tr>
+                        <td><h1 class="font-bold">Password:</h1></td>
+                        <td><input type="password" name="password" placeholder="Password" 
+                            class = "form-control 
+                                    block w-full 
+                                    px-4 
+                                    py-2 
+                                    text-l 
+                                    font-normal 
+                                    text-gray-700 
+                                    bg-gray-100 
+                                    bg-clip-padding 
+                                    border 
+                                    border-solid 
+                                    border-gray-300 
+                                    rounded 
+                                    transition 
+                                    ease-in-out 
+                                    m-0 
+                                    focus:text-gray-700 
+                                    focus:bg-white 
+                                    focus:border-blue-600 
+                                    focus:outline-none">
+                        </td>
+                    </tr>
 
+                    <tr>
+                        <div class="text-center lg:text-center py-3">
+                            <input class =  "inline-block 
+                                            px-7 
+                                            py-3 
+                                            bg-blue-500 
+                                            text-white 
+                                            font-medium 
+                                            text-sm 
+                                            leading-snug 
+                                            uppercase 
+                                            rounded 
+                                            shadow-md 
+                                            hover:bg-blue-400 
+                                            hover:shadow-lg 
+                                            focus:bg-blue-400 
+                                            focus:shadow-lg 
+                                            focus:outline-none 
+                                            focus:ring-0 
+                                            active:bg-blue-400 
+                                            active:shadow-lg 
+                                            transition 
+                                            duration-150 
+                                            ease-in-out"
+                                type="submit" value="Login">
+                        </div>
+                    </tr>
+                </form>
+            Belum mempunyai akun? <a href="{% url 'todolist:register' %}"> <span style="color:blue">Buat Akun</span></a> 
+            {% if messages %}
+                {% for message in messages %}
+                <div class=" text-center font-semibold text-red-600 mb-3 rounded-lg">
+                    <p class="">{{ message }}</p>
+                </div>
+                {% endfor %}
+            {% endif %} 
+        </div>
+    </div>
+    
+</div>
+           
+    </div>
 </div>
 
 {% endblock content %}
