--- a/todolist/templates/register.html
+++ b/todolist/templates/register.html
@@ -3,32 +3,51 @@
 {% block meta %}
 <title>Registrasi Akun</title>
 {% endblock meta %}
-
-{% block content %}  
-
-<div class = "login">
-    
-    <h1>Formulir Registrasi</h1>  
-
-        <form method="POST" >  
-            {% csrf_token %}  
-            <table>  
-                {{ form.as_table }}  
-                <tr>  
-                    <td></td>
-                    <td><input type="submit" name="submit" value="Daftar"/></td>  
-                </tr>  
-            </table>  
-        </form>
-
-    {% if messages %}  
-        <ul>   
-            {% for message in messages %}  
-                <li>{{ message }}</li>  
-                {% endfor %}  
-        </ul>   
-    {% endif %}
-
+{% block content %}
+<div class = "login">  
+    <div class=" bg-slate-200 h-screen">
+        <div class = "h-screen login flex justify-center items-center">
+            <div class="block bg-white shadow-lg rounded-lg p-6">
+                <h1 class="font-bold text-blue-600 text-2xl mt-0.3 mb-1 ml-0.3">Formulir Registrasi</h1>
+                <form method="POST" >  
+                    {% csrf_token %}  
+                    <table class="text-start">  
+                        {{ form.as_table }}  
+                        <tr>  
+                            <td class="text-center font-bold" colspan="2"><button class="btn btn-primary submit inline-block 
+                                px-7 
+                                py-3 
+                                bg-blue-500 
+                                text-white 
+                                font-medium 
+                                text-sm 
+                                leading-snug 
+                                uppercase 
+                                rounded 
+                                shadow-md 
+                                hover:bg-blue-400 
+                                hover:shadow-lg 
+                                focus:bg-blue-400 
+                                focus:shadow-lg 
+                                focus:outline-none 
+                                focus:ring-0 
+                                active:bg-blue-400 
+                                active:shadow-lg 
+                                transition 
+                                duration-150 
+                                ease-in-out" name="submit" value="Daftar">Register</td>  
+                        </tr>  
+                    </table>  
+                </form>
+            {% if messages %}  
+                <ul>   
+                    {% for message in messages %}  
+                        <li>{{ message }}</li>  
+                        {% endfor %}  
+                </ul>   
+            {% endif %}
+        </div>
+    </div>
 </div>  
 
 {% endblock content %}
