--- a/todolist/templates/show_todolist.html
+++ b/todolist/templates/show_todolist.html
@@ -1,43 +1,46 @@
 {% extends 'base.html' %}
  {% block content %}
-<div class="bg-slate-400 min-h-screen">
-  <div class="bg-gray-500 h-16 w-screen">
+<div class="bg-slate-200 min-h-screen">
+  <div class="bg-slate-400 w-screen">
     <div class="flex justify-between">
-      <div class="p-2 px-4 font-semibold text-blue-800 text-2xl md:text-3xl lg:text-4xl">
+      <div class="p-2 px-4 font-semibold text-black-800 text-2xl md:text-3xl lg:text-4xl">
         To Do List
       </div>
       <div class="p-2 flex gap-2 lg:gap-3 pr-4">
-        <button class="w-36 px-7 py-3 bg-blue-500 text-white font-medium text-sm leading-snug uppercase rounded shadow-md hover:bg-blue-400 hover:shadow-lg focus:bg-blue-400 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-400 active:shadow-lg transition duration-150 ease-in-out">
+        <button class="text-white bg-gradient-to-r from-cyan-500 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">
           <a href="{% url 'todolist:new_create_todolist' %}">
-        Create Task</button>
+            Create Task
+          </a>
+        </button>
         
-        <button class="w-36 px-7 py-3 bg-blue-500 text-white font-medium text-sm leading-snug uppercase rounded shadow-md hover:bg-blue-400 hover:shadow-lg focus:bg-blue-400 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-400 active:shadow-lg transition duration-150 ease-in-out">
-        <a href="{% url 'todolist:logout' %}">Logout</a></button>
+        <button class="text-white bg-gradient-to-r from-cyan-500 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">
+          <a href="{% url 'todolist:logout' %}">Logout</a>
+        </button>
       </div>
     </div>
   </div>
-  <div class=" flex items-center justify-center">
-    <h1 class="font-bold text-2xl text-center mt-4">Welcome back {{username}}</h1>
+  <div class=" flex items-center justify-center mb-10">
+    <h1 class="font-bold text-2xl text-center mt-4">Welcome back <span class="text-red-500">{{username}}</span></h1>
   </div>
-        <div class="flex flex-wrap gap-5">
-        {% for item in semua_task %}
-        <div class = "bg-white">
-            <p class="text-center text-xl font-semibold">{{item.title}}
-            <p class="text-center text-xs">{{item.date}}
-            <p class="text-center text-xs">{{item.description}}</p>
-            <div class="flex m-2 p-2 flex-col">
-              <div class="transition-opacity bg-gray-800 bg-opacity-10 rounded-2xl">
-                <p class ="text-green">
-                  Done : 
-                  {% if item.is_finished %}
-                  Yes
-                  {% else %}
-                  No
-                  {% endif %}
-                </p>
-              </div>
+  <div class="max-w-[80%] mx-auto">
+    <div class="flex flex-wrap gap-5 justify-center">
+      {% for item in semua_task %}
+      <div class = "bg-white rounded-lg transition ease-in-out hover:scale-105 hover:bg-gray-200">
+          <p class="text-center text-xl font-semibold">{{item.title}}
+          <p class="text-center text-xs">{{item.date}}
+          <p class ="text-center text-green">
+              {% if item.is_finished %}
+              <span class="text-blue-500">Finished</span>
+              {% else %}
+              <span class="text-red-500">Not Yet</span>
+              {% endif %}
+          </p>
+          <div class="flex m-2 p-1 flex-col">
+            <div class="transition-opacity bg-gray-800 bg-opacity-10 rounded-2xl">
+              <p class="text-center text-xs">{{item.description}}</p> 
             </div>
-            <div class="p-2 flex gap-2 lg:gap-3 pr-4">
+          </div>
+          <div class="p-2 flex gap-2 lg:gap-3 pr-4">
               <button class="btn btn-primary submit inline-block 
                               px-7 
                               py-3 
@@ -64,7 +67,7 @@
               <button class=  "btn btn-primary submit inline-block 
                               px-7 
                               py-3 
-                              bg-blue-500 
+                              bg-red-500 
                               text-white 
                               font-medium 
                               text-sm 
@@ -72,7 +75,7 @@
                               uppercase 
                               rounded 
                               shadow-md 
-                              hover:bg-blue-400 
+                              hover:bg-red-400 
                               hover:shadow-lg 
                               focus:bg-blue-400 
                               focus:shadow-lg 
@@ -84,12 +87,11 @@
                               duration-150 
                               ease-in-out">
               <a href="deletetask/{{item.id}}">Delete task</a></button>
-            </div>
-        {% comment %} Tambahkan data di bawah baris ini {% endcomment %}
-        {% endfor %}
-        </div>
         </div>
       </div>
+      {% comment %} Tambahkan data di bawah baris ini {% endcomment %}
+      {% endfor %}
     </div>
-  </div>       
- {% endblock content %}
+  </div> 
+  {% endblock content %}
+</div
