--- a/todolist/templates/new_create_todolist.html
+++ b/todolist/templates/new_create_todolist.html
@@ -5,29 +5,90 @@
 {% endblock meta %}
 
 {% block content %} 
-
-<div class = "create task">
-
-    <h1>Judul Baru</h1>
-
-    <form method="POST" action="">
-        {% csrf_token %}
-        <table>
-            <tr>
-                <td>Judul: </td>
-                <td><input type="text" name="title" placeholder="Title" class="form-control"></td>
-            </tr>
-                    
-            <tr>
-                <td>Deskripsi: </td>
-                <td><input type="text" name="description" placeholder="Description" class="form-control"></td>
-            </tr>
-
-            <tr>
-                <td></td>
-                <td><input class="btn login_btn" type="submit" value="Submit"></td>
-            </tr>
-        </table>
-    </form>
+<div class=" bg-slate-200 h-screen">
+    <div class = "h-screen login flex justify-center items-center">
+        <div class="block bg-white shadow-lg rounded-lg p-6">
+            <div class = "create task">
+                <h1 class="font-bold text-blue-600 text-2xl mt-0.3 mb-1 ml-0.3">Task baru</h1>
+                <form method="POST" action="">
+                    {% csrf_token %}
+                    <tr>
+                        <td><h1 class="font-bold">Judul: </h1></td>
+                        <td><input type="text" name="title" placeholder="Title" 
+                            class = "form-control 
+                                    block w-full 
+                                    px-4 
+                                    py-2 
+                                    text-l 
+                                    font-normal 
+                                    text-gray-700 
+                                    bg-gray-100 
+                                    bg-clip-padding 
+                                    border 
+                                    border-solid 
+                                    border-gray-300 
+                                    rounded 
+                                    transition 
+                                    ease-in-out 
+                                    m-0 
+                                    focus:text-gray-700 
+                                    focus:bg-white 
+                                    focus:border-blue-600 
+                                    focus:outline-none"></td>
+                    </tr>
+                    <tr>
+                        <td><h1 class="font-bold">Deskripsi: </h1></td>
+                        <td><input type="text" name="description" placeholder="Description" 
+                            class = "form-control 
+                                    block w-full 
+                                    px-4 
+                                    py-2 
+                                    text-l 
+                                    font-normal 
+                                    text-gray-700 
+                                    bg-gray-100 
+                                    bg-clip-padding 
+                                    border 
+                                    border-solid 
+                                    border-gray-300 
+                                    rounded 
+                                    transition 
+                                    ease-in-out 
+                                    m-0 
+                                    focus:text-gray-700 
+                                    focus:bg-white 
+                                    focus:border-blue-600 
+                                    focus:outline-none"></td>
+                    </tr>
+                    <tr>
+                        <div class="text-center lg:text-center py-3">
+                            <td><input class="inline-block 
+                                px-7 
+                                py-3 
+                                bg-blue-500 
+                                text-white 
+                                font-medium 
+                                text-sm 
+                                leading-snug 
+                                uppercase 
+                                rounded 
+                                shadow-md 
+                                hover:bg-blue-400 
+                                hover:shadow-lg 
+                                focus:bg-blue-400 
+                                focus:shadow-lg 
+                                focus:outline-none 
+                                focus:ring-0 
+                                active:bg-blue-400 
+                                active:shadow-lg 
+                                transition 
+                                duration-150 
+                                ease-in-out" type="submit" value="Submit"></td>
+                        </div>
+                    </tr>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock content %} 
