--- a/todolist/templates/register.html
+++ b/todolist/templates/register.html
@@ -14,7 +14,7 @@
                     <table class="text-start">  
                         {{ form.as_table }}  
                         <tr>  
-                            <td class="text-center font-bold" colspan="2"><button class="btn btn-primary submit inline-block 
+                            <td class="text-center font-bold" colspan="2"><button class =  "inline-block 
                                 px-7 
                                 py-3 
                                 bg-blue-500 
