--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <title>Nyoo Steven PBP</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   {% block meta %}
   {% endblock meta %}
 </head>
